# Autonomous-Data-Analyst-Agent

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_evals.py  verify_sandbox.py
output/: analysis_report.md
src/: config.py  graph.py  state.py
src/agents/: __init__.py  analyst.py  collector.py  planner.py  reporter.py
src/tools/: __init__.py  finance.py  kaggle_tool.py  sandbox.py  scraper.py  search.py  weather.py
