[project]
name = "autonomous-data-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaggle>=2.2.2",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]
